--- a/package.json
+++ b/package.json
@@ -1,34 +1,20 @@
 {
   "name": "cunnies-gummies-dashboard",
   "version": "1.0.0",
-  "description": "Sales forecasting & supply chain dashboard for Cunnies Gummies",
-  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.2.0",
+
     "react-dom": "^18.2.0",
-    "recharts": "^2.10.0",
-    "axios": "^1.6.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "dev": "vite"
+    "recharts": "^2.10.0"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
